--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </tr>
         <tr>
             <td><img src="rools.jpg" height="250" width="400" alt=""></td>
-            <td><h4>Cable Tray</h4>
+            <td bgcolor="red"><h4>Cable Tray</h4>
                 <p>We have so many different kind and size of Cable Tray in M/S Galvanize and coated sheet.
                 You can purchase S.S Cable Tray from us too. Cable Tray of any industries you can buy from us.</p>
                 <p>We have so many different kind and size of Cable Tray in M/S Galvanize and coated sheet.
